# OpenEMR-Copilot-Agent

./: .codespell-ignore-words.txt  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  COST.md  COST_LATENCY.md  Dockerfile  PATIENT_DASHBOARD_MIGRATION.md  PRD.md  PRD2.md  Patient-Dashboard-Migrations-Tasks.md  README.md  SUBMISSIONW2.md  TASKS.md  TASKS2.md  USERS.md  W2_ARCHITECTURE.md  WEEK2_README.md  composer.json  init-sites-volume.sh  phpstan.neon.dist
agent-service/: .gitignore  COST_MULTIMODAL.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  railway.toml  register-oauth-client.sh
agent-service/corpus/sources/: LICENSES.md
agent-service/corpus/sources/ada/: prediabetes_standards_of_care.md
agent-service/corpus/sources/aha/: acei_monitoring.md  atrial_fibrillation_anticoagulation.md  cad_secondary_prevention.md  chest_pain_evaluation.md  cholesterol_management.md  heart_failure_reduced_ef.md  hypertension_management.md
agent-service/corpus/sources/cdc/: acute_otitis_media.md  adult_immunization_schedule.md  iron_deficiency_anemia.md  national_diabetes_prevention_program.md  tobacco_cessation.md
agent-service/corpus/sources/nih/: alcohol_use_disorder.md  asthma_management_and_pregnancy.md  cbc_interpretation.md  cholesterol_thresholds.md  ckd_staging_management.md  cmp_interpretation.md  diabetes_management.md  hashimotos_thyroiditis.md  hypothyroidism_management.md  insulin_initiation_t2dm.md  metformin_monitoring.md  prediabetes_prevention.md
agent-service/corpus/sources/uspstf/: aspirin_primary_prevention.md  breast_cancer_screening.md  colorectal_cancer_screening.md  hypertension_screening.md  lung_cancer_screening.md  prediabetes_diabetes_screening.md  statin_primary_prevention.md  thyroid_dysfunction_screening.md
agent-service/data/corpus/: bm25.pkl  dense.pkl  manifest.json
agent-service/docs/: EARLY_SUBMISSION_RUNBOOK.md
agent-service/evals/extraction/: baseline.json  cases.jsonl
agent-service/scripts/: backfill_citation_fields.py  demo_supervisor.py  generate_client_keypair.py  register_oauth_client.py  seed_eval_cases.py  seed_fixture_patients.py  smoke_langgraph.py  snapshot_eval_patients.py
agent-service/src/clinical_copilot/: __init__.py  app_state.py  config.py  logging.py  main.py
agent-service/src/clinical_copilot/audit/: __init__.py  log.py  models.py  reader.py
agent-service/src/clinical_copilot/auth/: client_assertion.py  internal_token.py  jwt_verifier.py  oauth_client.py  role.py  session.py
agent-service/src/clinical_copilot/corpus/: __init__.py  chunker.py  embedder.py  index.py  records.py  rerank.py  retriever.py  scrub.py
agent-service/src/clinical_copilot/data/: __init__.py  fhir_client.py  models.py  rest_client.py
agent-service/src/clinical_copilot/db/: __init__.py  base.py  engine.py  models.py
agent-service/src/clinical_copilot/discrepancy/: __init__.py  background.py  cache.py  chart_provider.py  engine.py  normalize.py
agent-service/src/clinical_copilot/documents/: __init__.py  extractor.py  fetcher.py  ocr_bbox.py  page_cache.py  store.py  synthetic_render.py
agent-service/src/clinical_copilot/evals/: __init__.py
agent-service/src/clinical_copilot/observability/: __init__.py  metrics.py  redacting_tracer.py  redaction.py  traces.py  tracing.py
agent-service/src/clinical_copilot/orchestrator/: __init__.py  agent.py  chart_pack.py  critic.py  cross_patient_guard.py  edges.py  lanes.py  llm_gateway.py  planner.py  schemas.py  sessions.py  state.py  supervisor.py  supervisor_langgraph.py
agent-service/src/clinical_copilot/runtime/: __init__.py  async_bridge.py
agent-service/src/clinical_copilot/schemas/: __init__.py  abstain.py
agent-service/src/clinical_copilot/scripts/: __init__.py  clear_discrepancy_cache.py  ingest_document.py  retrieve_evidence.py
agent-service/src/clinical_copilot/tools/: __init__.py  allergies.py  base.py  fhir_base.py  fixtures.py  impl.py  labs.py  (+6 more)
agent-service/tests/: conftest.py
agent-service/tests/eval/: __init__.py  extraction_runner.py  harness.py  persistence.py  runner.py  test_citation_separation.py
agent-service/tests/fixtures/: build_pdfs.py  patients.json
agent-service/tests/integration/: synthesis_flow_test.py  test_agent_query_writes_trace.py  test_audit_failclosed_path.py  test_chart_pack_isolation.py  test_chart_provider_parity.py  test_document_ingest_writes_trace.py  test_document_page_route.py  test_fhir_client.py  test_internal_routes.py  test_lane_latency.py  test_metrics_route.py  test_oauth_client.py  test_query_route_supervisor.py  test_seeded_fixture.py  test_supervisor.py  test_supervisor_aaisp_budget_gate.py  test_supervisor_audit_route.py  test_supervisor_chart_pack.py  test_tools_fhir.py
agent-service/tests/unit/: _fhir_tool_helpers.py  conftest.py  test_abstention_granularity.py  test_audit_log_failclosed.py  test_background.py  test_chart_pack.py  test_citation_canonical_id_invariant.py  test_citation_check.py  test_client_assertion.py  test_cross_patient_guard.py  test_discrepancy_cache.py  test_discrepancy_rules.py  test_eval_harness.py  test_eval_persistence.py  test_fhir_chart_provider.py  test_fhir_client.py  test_field_check.py  test_health.py  test_internal_token.py  test_jwt_verifier.py  test_llm_gateway.py  test_metrics.py  test_normalize.py  test_oauth_client.py  test_orchestrator.py  test_orchestrator_lane.py  test_orchestrator_slow.py  test_phi_redaction.py  test_query_route.py  test_role_enforcement.py  test_rules_engine.py  test_scoped_registry.py  test_session_store.py  test_stage_latencies.py  test_tool_rbac.py  test_tools.py  test_tools_allergies.py  test_tools_labs.py  test_tools_meds.py  test_tools_notes.py  (+3 more)
agent-service/warmer/: Dockerfile  railway.toml
(+469 files in other folders)
