[project]
name = "clinical-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Nguyen", email = "andy.nguyen@challenger.gauntletai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langsmith>=0.7.38",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
clinical-copilot = "clinical_copilot:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
