[project]
name = "clinical-copilot"
version = "0.1.0"
description = "Clinical Co-Pilot agent service — FastAPI sidecar for OpenEMR"
readme = "README.md"
authors = [
    { name = "Andy Nguyen", email = "andy.nguyen@challenger.gauntletai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "cryptography>=44",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langsmith>=0.7.38",
    "numpy>=1.26",
    "openai>=1.50",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.10",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
    "pypdfium2>=4.30",
    "pillow>=11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.2",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PL",   # pylint subset
]
ignore = [
    "PLR0913",  # too many args — fine for FastAPI route handlers
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # magic-value comparisons fine in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_unimported = false
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["langsmith.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pypdfium2", "pypdfium2.*", "PIL", "PIL.*", "rank_bm25", "rapidfuzz", "rapidfuzz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a running local OpenEMR (set OPENEMR_INTEGRATION=1 to enable)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:fastapi.*",
    # ssl.SSLSocket teardown from a long-lived httpx pool (the
    # Anthropic SDK constructs one per ``Anthropic(...)`` instance and
    # holds it for the process lifetime) surfaces as
    # ``PytestUnraisableExceptionWarning`` at end-of-session in some
    # test orderings — the connection close runs after the test it
    # gets attributed to has already passed. Not a test failure;
    # ignore so ``filterwarnings = error`` doesn't promote it.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
